<resources>
    <string name="app_name">TMDB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="favorites">favorites</string>
    <string name="popular">popular</string>
    <string name="broadcast_now">playing now</string>
    <string name="movieItem_poster">poster</string>
    <string name="title">title</string>
    <string name="movieItem_desc">desc</string>
    <string name="menu_movie">Movie</string>
    <string name="release_date">release date</string>
    <string name="overview">overview</string>
    <string name="vote_count">vote_count</string>
    <string name="vote_average">vote_average</string>

</resources>