<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/constraintLayout_movieItem_main"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:elevation="5dp">

    <TextView
        android:id="@+id/textView_movieItem_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView_movieItem_poster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_movieItem_desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:maxLines="4"
        android:text="@string/movieItem_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView_movieItem_poster"
        app:layout_constraintTop_toBottomOf="@id/textView_movieItem_title" />

    <ImageView
        android:id="@+id/imageView_movieItem_poster"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:contentDescription="@string/movieItem_poster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />


</androidx.constraintlayout.widget.ConstraintLayout>