<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_home_movies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_home_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broadcast_now"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>

        <Button
            android:id="@+id/button_home_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>
        <Button
            android:id="@+id/button_home_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>